--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <script type="text/javascript" src="application.js"></script>
+  <script type="text/javascript"></script>
 </head>
 <body>
 
